<resources>
    <string name="app_name">Weather</string>
    <string name="moscow">Moscow</string>
    <string name="wed_10_march_14_04">Mon, 10 march 14:04</string>
    <string name="_8_u00b0">8°</string>
    <string name="cloudy">Cloudy</string>
    <string name="_7_u00b0">7°</string>
    <string name="_13_u00b0">13°</string>
    <string name="_5_u00b0">5°</string>
    <string name="_6_u00b0">6°</string>
    <string name="_4_u00b0">4°</string>
    <string name="city">City</string>
    <string name="input_current_city">Input current city</string>
    <string name="wind">Wind</string>
    <string name="airpressure">AirPressure</string>

    <string name="dark">Dark</string>
    <string name="unit">Unit</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="use_current_location">Use current location</string>
    <string name="notification">Notification</string>
    <string name="show_on_widget">Show on widget</string>
    <string name="refresh_when_app_opens">Refresh when app opens</string>
    <string name="weather_alerts">Weather alerts</string>
    <string name="add_weather_icon">Add Weather icon</string>
    <string name="customization_service">Customization Service</string>
    <string name="about_weather">About Weather</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursrday">Thursrday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="_15_00">15:00</string>
    <string name="_16_00">16:00</string>
    <string name="_17_00">17:00</string>
    <string name="_18_00">18:00</string>
    <string name="_19_00">19:00</string>
    <string name="_20_00">20:00</string>
    <string name="_21_00">21:00</string>
    <string name="_22_00">22:00</string>
    <string name="settings">Settings</string>
    <string name="select">Select</string>
    <string name="search">search</string>
    <string name="url_yandex_weather" translatable="false"><![CDATA[https://yandex.ru/pogoda/213?utm_source=serp&utm_campaign=wizard&utm_medium=desktop&utm_content=wizard_desktop_main&utm_term=title]]></string>
    <string name="details">Details</string>
    <string name="developers">Developers</string>
    <string name="ok">OK</string>
    <string name="off">Off</string>

    <string name="place_not_found">Place not found or unavailable network</string>
    <string name="unavailable_network">Unavailable network</string>

    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>
    <string name="weather">Weather</string>
    <string name="changeimage">Change Image</string>
    <string name="picasso" translatable="false">Picasso</string>
    <string name="weather_in_your_city">Weather in your city!</string>

</resources>
