<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:text="@string/unit"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:background="@color/white"
            tools:ignore="RtlSymmetry" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:text="@string/auto_refresh"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:background="@color/white"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:text="@string/city"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:background="@color/white"
            tools:ignore="RtlSymmetry" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:text="@string/use_current_location"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:background="@color/white"
            tools:ignore="RtlSymmetry" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:text="@string/notification"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:background="@color/white"
            tools:ignore="RtlSymmetry" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:text="@string/show_on_widget"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:background="@color/white"
            tools:ignore="RtlSymmetry" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:text="@string/refresh_when_app_opens"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:background="@color/white"
            tools:ignore="RtlSymmetry" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:text="@string/weather_alerts"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:background="@color/white"
            tools:ignore="RtlSymmetry" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:text="@string/add_weather_icon"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:background="@color/white"
            tools:ignore="RtlSymmetry" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:text="@string/customization_service"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:background="@color/white"
            tools:ignore="RtlSymmetry" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:text="@string/about_weather"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:background="@color/white"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
</ScrollView>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>