<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginStart="10sp"
    android:layout_marginEnd="10sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/weekday"
        style="Weekday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday" />

    <TextView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/weather_alerts"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/gradView"
        style="@style/gradDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6_u00b0" />

</LinearLayout>