<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSky">

        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/firstLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSky"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/moscow"
                    android:textColor="#000000"
                    android:textSize="38sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wed_10_march_14_04"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/weatherToday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/cloud"
                    android:gravity="center_vertical"
                    android:text="@string/_8_u00b0"
                    android:textColor="#000000"
                    android:textSize="66sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cloudy"
                    android:textSize="24sp" />

                <CheckBox
                    android:id="@+id/details_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/details" />

                <TextView
                    android:id="@+id/detailsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorCitySky"
                android:paddingStart="20dp"
                android:text="@string/daily"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/HourRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorCitySky"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorCitySky"
                android:paddingStart="20dp"
                android:layout_marginTop="20sp"
                android:text="@string/hourly"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weekendRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorCitySky"/>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/settings"
        android:src="@drawable/settings"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>